tests/parser/parse-type.11.bad.error
error: Malformed function type
  --> test:4:12
   |
 4 |  (declare f (-> T))
   |              ^^ invalid function syntax
